--- a/videoBUGBUG/login.html
+++ b/videoBUGBUG/login.html
@@ -24,7 +24,7 @@
             <label for="">Login</label>
             <input type="text" name="username" placeholder="Username">
             <input type="password" name="password" placeholder="Password">
-            <input type="submit" value="submit">
+            <input type="submit" value="Submit">
         </form>
     </div>
 </body>
