--- a/videoBUGBUG/upload.html
+++ b/videoBUGBUG/upload.html
@@ -21,24 +21,30 @@
     </div>
     <div class="uploadVideo">
         <form action="" method="post">
-            <input type="file" name="" id="file">
-            <input type="text" name="title" placeholder="Title"> <textarea name="description" id="description" cols="30" rows="10"></textarea>
+            <input type="file" name="" id="file" class="bugvideo"><br>
+            <input type="text" name="title" placeholder="Title"><br> <textarea name="description" id="description" cols="30" rows="10" placeholder="Description"></textarea><br>
             <input type="submit" value="Submit">
         </form>
     </div>
-    Your Uploads
-    <table class="videoTable" border="1">
-        <tr>
-            <th>Title</th>
-            <th>Video</th>
-            <th>Description</th>
-        </tr>
-        <tr>
-            <td>sample</td>
-            <td>sample</td>
-            <td>sample</td>
-        </tr>
-    </table>
+    <h4 class="headUp">Your Uploads</h4>
+    <div class="tbArea">
+        <table class="videoTable">
+            <tr>
+                <th>Title</th>
+                <th>Video</th>
+                <th>Description</th>
+                <th>Status</th>
+
+            </tr>
+            <tr>
+                <td>sample</td>
+                <td>sample</td>
+                <td>sample</td>
+                <td>Progress</td>
+
+            </tr>
+        </table>
+    </div>
 </body>
 
 </html>
